added search bar and its functionality